--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #c02828;
+    background-color: #fafafa;
     color: #222;
     margin: 40px;
     padding: 0;
